[Fix] List title overflow

--- a/src/components/List/styles.scss
+++ b/src/components/List/styles.scss
@@ -27,6 +27,15 @@
       font-size: 1.125rem;
       margin-bottom: 12px;
       padding: 0 16px;
+      white-space: normal;
+      > .list-title {
+        max-width: 200px;
+        overflow: hidden;
+        display: block;
+        // overflow-wrap: break-word;
+        // word-wrap: break-word;
+        text-overflow: ellipsis;
+      }
       > form {
         > input {
           font-size: 1.125rem;
